final touches of the patch (t2 trads, cndctv rlys)

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -2676,7 +2676,12 @@
  # Evolved
 	civic_tec_machine_menial:0 "§R§!Conductive Relays"
 	civic_tec_machine_menial_desc:0 "['concept_tec_basic_civic']\n\nThe excess of energy requirements for any machine is a evidence that must be effectively and practically solved; by recycling extra heat and kinetic energy from storages and factories to other processes via peer-to-per drone relay transmision, energy demands can be exponentially reduced and dispersion mitigated, while improving performance."
-	civic_tec_machine_menial_tooltip:0 "£district£ §Y$district_nexus$§! districts provide §G1§! extra £job_technician_drone£ §Y$job_technician_drone$§! job.\n$tec_loc_amenities$ from £job_technician£ $job_technician_drone_plural$: §G+1§!\n"
+	civic_tec_machine_menial_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£district£ Improved Conductivity§!\n£district£ §YNexus Districts§! provide §G1§! £job_technician£ $job_technician_drone$\n£district£ §YGenerator Districts§! provide §G+0.15§! $tec_loc_energy$ from £job_technician£ Technicians and have §R1§! extra $tec_loc_energy$ upkeep.\n\n$tec_loc_c_unlocks_feature$ §H£district£ Coupled Retro-feedback§!\nEvery §Y3§! £district£ §HGenerator Districts§! grant §G+1§! §Y£building£ Max Buildable Generator Districts§! on regular planets.\n\n$tec_loc_c_modifiers$\n$tec_loc_amenities$ from £job_technician£ $job_technician_drone_plural$: §G+1§!\n"
+	# +1 technician from housing, 
+	# + 1 amenities from technicians
+	# +0.15 energy grom technicians
+	# +0.33 districts
+	OLD_civic_tec_machine_menial_tooltip:0 "£district£ §Y$district_nexus$§! districts provide §G1§! extra £job_technician_drone£ §Y$job_technician_drone$§! job.\n$tec_loc_amenities$ from £job_technician£ $job_technician_drone_plural$: §G+1§!\n"
 
 	civic_tec_machine_digitalization:0 "§R§!Cyberspace Projection"
 	civic_tec_machine_digitalization_desc:0 "['concept_tec_basic_civic']\n\nThough space is practically endless or impossible to meassure, theorically it has limits; thats why efficient use of space and workforce via post-digitalization and advanced quantic entanglement must be impossed, reducing matter while increasing energetic requirements."
