--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -445,3 +445,44 @@ tec_cui_tec_ai_empire_leader_loc: "Leader (non-AI Nodes)"
 #Level    II   III   IV    V     VI     VII    VIII   IX     X
 #XP       400  1100  2100  3400  5000   6900   8100   10600  13400
 #Total XP 400  1500  3600  7000  12000  18900  27000  37600  51000
+
+
+# Debug
+ decision_tec_debug_create_pops:0 "z-DEBUG-CREATE 10 POPS (£planet£)"
+ decision_tec_debug_create_pops_desc:0 "Creates 10 pops"
+ decision_tec_debug_create_pops_tooltip:0 "Creates 10 pops"
+
+ decision_tec_debug_pop_output:0 "z-DEBUG-JOB OUTPUT (£planet£)"
+ decision_tec_debug_pop_output_desc:0 "Increases job output by 10000% - reactivate to disable"
+ decision_tec_debug_pop_output_tooltip:0 "Increases job output by 10000% - reactivate to disable"
+ modifier_tec_debug_pop_output:0 "$decision_tec_debug_pop_output$"
+
+ decision_tec_debug_resources:0 "z-DEBUG-RESOURCES (£empire£)"
+ decision_tec_debug_resources_desc:0 "Provides 5000 of each resource"
+ decision_tec_debug_resources_tooltip:0 "Provides 5000 of each resource"
+ modifier_tec_debug_resources:0 "$decision_tec_debug_resources$"
+
+
+ decision_tec_debug_planet_building_speed:0 "z-DEBUG-BUILDING SPEED (£empire£)"
+ decision_tec_debug_planet_building_speed_desc:0 "Increases planet building speed by 10000% - reactivate to disable"
+ decision_tec_debug_planet_building_speed_tooltip:0 "Increases planet building speed by 10000% - reactivate to disable"
+ modifier_tec_debug_planet_building_speed:0 "$decision_tec_debug_planet_building_speed$"
+
+ decision_tec_debug_planet_districts:0 "z-DEBUG-INCREASE SLOTS (£planet£)"
+ decision_tec_debug_planet_districts_desc:0 "Increases max building slots and 100 district slots"
+ decision_tec_debug_planet_districts_tooltip:0 "Increases max building slots and 100 district slots"
+ modifier_tec_debug_planet_districts:0 "$decision_tec_debug_planet_districts$"
+
+ decision_tec_debug_ship_building_speed:0 "z-DEBUG-SHIP BUILDING SPEED (£empire£)"
+ decision_tec_debug_ship_building_speed_desc:0 "Increases ship building speed - reactivate to disable"
+ decision_tec_debug_ship_building_speed_tooltip:0 "Increases ship building speed - reactivate to disable"
+ modifier_tec_debug_ship_building_speed:0 "$decision_tec_debug_ship_building_speed$"
+
+ decision_tec_debug_tech_speed:0 "z-DEBUG-TECH SPEED (£empire£)"
+ decision_tec_debug_tech_speed_desc:0 "Increases tech research speed - reactivate to disable"
+ decision_tec_debug_tech_speed_tooltip:0 "Increases tech research speed - reactivate to disable"
+ modifier_tec_debug_tech_speed:0 "$decision_tec_debug_tech_speed$"
+
+ decision_tec_debug_ship_techs:0 "z-DEBUG-SHIP TECHS (£empire£)"
+ decision_tec_debug_ship_techs_desc:0 "Provides all ship construction and starbase upgrade techs"
+ decision_tec_debug_ship_techs_tooltip:0 "Provides all ship construction and starbase upgrade techs"
