--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -5,7 +5,7 @@
 	tr_adaptability_void_finish_desc:0 "Resources from Habitat Planetary Features: §G+50%§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YStatecraft§! will be available.§!\n"
 
 # ------------------------------------------------- Diplomacy
-	tr_diplomacy_diplomatic_networking_desc:0 "Embassies produce §G+3§! §Y$tec_loc_unity$§!, scaling up to §G+10§! based on the empire £diplo_weight£ §Y$diplomatic_weight$§!."
+	tr_diplomacy_diplomatic_networking_desc:0 "Embassies produce §G+3§! §Y$tec_loc_unity$§!, scaling up to §G+10§! based on the empire £diplo_weight£ §Y$diplomatic_weight$§!.\nAllows Advanced Diplomatic Actions without an Embassy"
 
 	tr_diplomacy_finish_tooltip:4 "Diplomatic Weight: §G+10%§!\nAvailable Envoys: §G+1§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YStatecraft§! will be available.§!\n"
 
