--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -1492,7 +1492,7 @@ tech_reverse_advanced_dome: " "
 	# Main ascensions
 		# Biological
 			# Bio A                    tec_gene_path.xxx
-			# Bio B                    tec_bio_path.xxx
+			# Bio B                    tec_biogenic_path.xxx
 		# Cybernetics
 			# Cyborgs                  tec_cybernetic_path.xxx
 			# Synths                   tec_synth_path.xxx
@@ -1723,8 +1723,71 @@ tech_reverse_advanced_dome: " "
 	tec_gene_path.500.b:0 "Truly concerning."
 	tec_gene_path.500.c:0 "This is an abomination, we must stop them now."
 
-# Biological B TO DO
-# ------------------------------------------------------------ namespace = tec_bio_path
+# Biological B BIOGENIC
+# ------------------------------------------------------------ namespace = tec_biogenic_path
+ # Continues where the situation decides to embrace the tech - tec_gene_path.10085
+ # Note: from 50 to 0
+	tec_biogenic_path.10045.name:0 ""
+	tec_biogenic_path.10045.desc:0 ""
+	tec_biogenic_path.10045.a:0 ""
+
+	tec_biogenic_path.10030.name:0 ""
+	tec_biogenic_path.10030.desc:0 ""
+	tec_biogenic_path.10045.a:0 ""
+
+	tec_biogenic_path.10015.name:0 ""
+	tec_biogenic_path.10015.desc:0 ""
+	tec_biogenic_path.10045.a:0 "Knowledge is at our grasp, and so becoming ... more."
+	tec_biogenic_path.10045.a.tooltip:0 ""
+	tec_biogenic_path.10045.b:0 "This has been a mistake. We need to scrap this abominable discovery."
+	tec_biogenic_path.10045.b.tooltip:0 "We will lose the §R$situation_approach_tec_gene_path_t1_bio$§! approach.\nThe situation will advance rapidly towards the old outcome, using the standard use for the Genetic Malleability."
+	tec_biogenic_path.10045.c:0 ""
+	tec_biogenic_path.10045.c.tooltip:0 ""
+
+	tec_gene_path.10085.name:0 "Genetic Discovery"
+	tec_gene_path.10085.desc:0 "During one of the tests with our new discovered biotechnology, we found an... interesting anomaly - Some cells reacted to the malleability techniques, becoming semi-independent stem-cells able to not only recombine genetic material, but also create new expressions out if it.\nWhile we can continue forcing the allelomorphic change for streamlined genetic processes, we may be able to apply our efforts to the new hyper-cells, which can... change our entire perspective on genetics, biology and, perhaps, our species as a whole."
+	tec_gene_path.10085.a:0 "Focus on the existing research"
+	tec_gene_path.10085.a.tooltip:0 "The situation will advance rapidly towards the final outcome: Obtaining the desired Genetic Malleability."
+	tec_gene_path.10085.b:0 "Shift efforts to the new cells"
+	tec_gene_path.10085.b.tooltip:0 "We will obtain the §R$situation_approach_tec_gene_path_t1_bio$§! approach.\nThe situation will advance rapidly towards the new outcome, finding a new use for the Genetic Malleability."
+
+	tec_gene_path.100.name:0 "Engineered Evolution"
+	tec_gene_path.100.desc:0 "Sometimes evolution needs a nudge in the right direction. We now have the technology to genetically modify our bodies and minds to endure the trials of an ever-changing environment at an unprecedented rate, and now we also have the opportunity to further change our possibilities."
+	tec_gene_path.100.a:0 "We must start right now!"
+	tec_gene_path.100.a.tooltip:0 "The §Y$situation_tec_gene_path_t1$§! will be available."
+
+	tec_gene_path.10055.name:0 "Tailoring Genes"
+	tec_gene_path.10055.desc:0 "The first step on this research is to find the proper combination of genes that suit the purpose of moving our species to the right direction; Several pairs, triads and quad groups have resulted compatible, but we need to find the ones that really result in a perfect mixture."
+	tec_gene_path.10055.a:0 "Intriguing, continue the research"
+	tec_gene_path.10055.a.tooltip:0 ""
+
+	tec_gene_path.10070.name:0 "Flexible Alleles"
+	tec_gene_path.10070.desc:0 "Curiously, we tried applying certain electrochemical processes to expressive allelomorphs and it resulted in a curious breakthrough - The capacity of adaptation and integration of new code inside the existing one led to a potential controlled overload of genetic material.\nWith time and effort, this can allow a slightly higher integration of potential traits inside already crowded pairs."
+	tec_gene_path.10070.a:0 "This can be a revolution!"
+	tec_gene_path.10070.a.tooltip:0 ""
+
+	tec_gene_path.10085.name:0 "Genetic Discovery"
+	tec_gene_path.10085.desc:0 "During one of the tests with our new discovered biotechnology, we found an... interesting anomaly - Some cells reacted to the malleability techniques, becoming semi-independent stem-cells able to not only recombine genetic material, but also create new expressions out if it.\nWhile we can continue forcing the allelomorphic change for streamlined genetic processes, we may be able to apply our efforts to the new hyper-cells, which can... change our entire perspective on genetics, biology and, perhaps, our species as a whole."
+	tec_gene_path.10085.a:0 "Focus on the existing research"
+	tec_gene_path.10085.a.tooltip:0 "The situation will advance rapidly towards the final outcome: Obtaining the desired Genetic Malleability."
+	tec_gene_path.10085.b:0 "Shift efforts to the new cells"
+	tec_gene_path.10085.b.tooltip:0 "We will obtain the §R$situation_approach_tec_gene_path_t1_bio$§! approach.\nThe situation will advance rapidly towards the new outcome, finding a new use for the Genetic Malleability."
+
+ # Finish
+	tec_biogenic_path.105.name:0 "REPLACE_ME"
+	tec_biogenic_path.105.desc:0 "REPLACE_ME"
+	tec_biogenic_path.105.a:0 "REPLACE_ME"
+	tec_biogenic_path.105.a.tooltip:0 "REPLACE_ME"
+
+ # Communication to other empires
+	tec_biogenic_path.10501.name:0 "REPLACE_ME"
+	tec_biogenic_path.10501.desc:0 "REPLACE_ME"
+	tec_biogenic_path.10501.a:0 "REPLACE_ME"
+	tec_biogenic_path.10501.b:0 "REPLACE_ME"
+	tec_biogenic_path.10501.c:0 "REPLACE_ME"
+	tec_biogenic_path.10501.d:0 "REPLACE_ME"
+	tec_biogenic_path.10501.f:0 "REPLACE_ME"
+	tec_biogenic_path.10501.g:0 "REPLACE_ME"
 
 # T2 picked
 
