fix + reenabled cheat decisions

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -1775,17 +1775,21 @@ tech_reverse_advanced_dome: " "
 
  # Finish
 	tec_biogenic_path.105.name:0 "REPLACE_ME"
-	tec_biogenic_path.105.desc:0 "REPLACE_ME"
+	tec_biogenic_path.105.desc.regular:0 "REPLACE_ME"
+	tec_biogenic_path.105.desc.hivemind:0 "REPLACE_ME"
 	tec_biogenic_path.105.a:0 "REPLACE_ME"
 	tec_biogenic_path.105.a.tooltip:0 "REPLACE_ME"
 
  # Communication to other empires
 	tec_biogenic_path.10501.name:0 "REPLACE_ME"
+	tec_biogenic_path.10501.desc.regular:0 "REPLACE_ME"
+	tec_biogenic_path.10501.desc.hivemind:0 "REPLACE_ME"
 	tec_biogenic_path.10501.desc:0 "REPLACE_ME"
 	tec_biogenic_path.10501.a:0 "REPLACE_ME"
 	tec_biogenic_path.10501.b:0 "REPLACE_ME"
 	tec_biogenic_path.10501.c:0 "REPLACE_ME"
 	tec_biogenic_path.10501.d:0 "REPLACE_ME"
+	tec_biogenic_path.10501.e:0 "REPLACE_ME"
 	tec_biogenic_path.10501.f:0 "REPLACE_ME"
 	tec_biogenic_path.10501.g:0 "REPLACE_ME"
 
