removed debug decisions + ap changes

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -1727,51 +1727,87 @@ tech_reverse_advanced_dome: " "
 # ------------------------------------------------------------ namespace = tec_biogenic_path
  # Continues where the situation decides to embrace the tech - tec_gene_path.10085
  # Note: from 50 to 0
-	tec_biogenic_path.10045.name:0 ""
-	tec_biogenic_path.10045.desc:0 ""
-	tec_biogenic_path.10045.a:0 ""
+	tec_biogenic_path.10045.name:0 "TO DO"
+	tec_biogenic_path.10045.desc:0 "TO DO"
+	tec_biogenic_path.10045.a:0 "We should be cautious; Proceed with standard tests."
+	tec_biogenic_path.10045.a.tooltip:0 "TO DO"
+	tec_biogenic_path.10045.a.hivemind:0 "We should not risk our collective integrity - Proceed nominally."
+	tec_biogenic_path.10045.a.hivemind.tooltip:0 "TO DO"
+	tec_biogenic_path.10045.b:0 "Lets search willing subjects, may help."
+	tec_biogenic_path.10045.b.tooltip:0 "TO DO"
+	tec_biogenic_path.10045.b.hivemind:0 "We should isolate some of our drones for tests."
+	tec_biogenic_path.10045.b.hivemind.tooltip:0 "TO DO"
+	tec_biogenic_path.10045.c:0 "Progress reward no cowards. Force the use on living subjects."
+	tec_biogenic_path.10045.c.tooltip:0 "TO DO"
+	tec_biogenic_path.10045.c.hivemind:0 "Sacrifice one of our breeds for testing; A necessary loss."
+	tec_biogenic_path.10045.c.hivemind.tooltip:0 "TO DO"
 
-	tec_biogenic_path.10030.name:0 ""
-	tec_biogenic_path.10030.desc:0 ""
-	tec_biogenic_path.10045.a:0 ""
+	# Goes well
+	tec_biogenic_path.100301.name:0 "TO DO"
+	tec_biogenic_path.100301.desc:0 "TO DO"
+	tec_biogenic_path.100301.a:0 "Congratulate our researchers, and continue the experiment."
+	tec_biogenic_path.100301.a.tooltip:0 "TO DO"
+	tec_biogenic_path.100301.a.hivemind:0 "We must be proud of our achievement. Continue forward."
+	tec_biogenic_path.100301.a.hivemind.tooltip:0 "TO DO"
+	# Goes neutral
+	tec_biogenic_path.100301.name:0 "TO DO"
+	tec_biogenic_path.100301.desc:0 "TO DO"
+	tec_biogenic_path.100301.a:0 "A necessary loss, but a step forward for our kind"
+	tec_biogenic_path.100301.a.tooltip:0 "TO DO"
+	tec_biogenic_path.100301.a.hivemind:0 "A necessary loss, they fulfilled their duty"
+	tec_biogenic_path.100301.a.hivemind.tooltip:0 "TO DO"
+	# Goes bad
+	tec_biogenic_path.100301.name:0 "TO DO"
+	tec_biogenic_path.100301.desc:0 "TO DO"
+	tec_biogenic_path.100301.a:0 "This will be a big hit on our research progress..."
+	tec_biogenic_path.100301.a.tooltip:0 "TO DO"
+	tec_biogenic_path.100301.a.hivemind:0 "Unexpected. Unacceptable. Necessary."
+	tec_biogenic_path.100301.a.hivemind.tooltip:0 "TO DO"
 
-	tec_biogenic_path.10015.name:0 ""
-	tec_biogenic_path.10015.desc:0 ""
-	tec_biogenic_path.10045.a:0 "Knowledge is at our grasp, and so becoming ... more."
-	tec_biogenic_path.10045.a.tooltip:0 ""
-	tec_biogenic_path.10045.b:0 "This has been a mistake. We need to scrap this abominable discovery."
-	tec_biogenic_path.10045.b.tooltip:0 "We will lose the §R$situation_approach_tec_gene_path_t1_bio$§! approach.\nThe situation will advance rapidly towards the old outcome, using the standard use for the Genetic Malleability."
-	tec_biogenic_path.10045.c:0 ""
-	tec_biogenic_path.10045.c.tooltip:0 ""
+	tec_biogenic_path.10015.name:0 "TO DO"
+	tec_biogenic_path.10015.desc:0 "TO DO"
+	tec_biogenic_path.10015.desc.good:0 "TO DO"
+	tec_biogenic_path.10015.desc.hivemind.good:0 "TO DO"
+	tec_biogenic_path.10015.desc.neutral:0 "TO DO"
+	tec_biogenic_path.10015.desc.hivemind.neutral:0 "TO DO"
+	tec_biogenic_path.10015.desc.bad:0 "TO DO"
+	tec_biogenic_path.10015.desc.hivemind.bad:0 "TO DO"
+	tec_biogenic_path.10015.a:0 "Knowledge is at our grasp, and so becoming ... more."
+	tec_biogenic_path.10015.a.hivemind:0 "We need this knowledge. We need to become more."
+	tec_biogenic_path.10015.a.tooltip:0 "The situation will advance rapidly towards the final outcome: Concluding the research on the §GHyper-Cells§!."
+	tec_biogenic_path.10015.b:0 "This has been a mistake. We need to scrap this abominable discovery."
+	tec_biogenic_path.10015.b.hivemind:0 "This is a clear deviation from the collective needs. Cut this research."
+	tec_biogenic_path.10015.b.tooltip:0 "We will lose the §R$situation_approach_tec_gene_path_t1_bio$§! approach.\nThe situation will advance rapidly towards the old outcome, using the standard use for the §HGenetic Malleability§!."
 
-	tec_gene_path.10085.name:0 "Genetic Discovery"
-	tec_gene_path.10085.desc:0 "During one of the tests with our new discovered biotechnology, we found an... interesting anomaly - Some cells reacted to the malleability techniques, becoming semi-independent stem-cells able to not only recombine genetic material, but also create new expressions out if it.\nWhile we can continue forcing the allelomorphic change for streamlined genetic processes, we may be able to apply our efforts to the new hyper-cells, which can... change our entire perspective on genetics, biology and, perhaps, our species as a whole."
-	tec_gene_path.10085.a:0 "Focus on the existing research"
-	tec_gene_path.10085.a.tooltip:0 "The situation will advance rapidly towards the final outcome: Obtaining the desired Genetic Malleability."
-	tec_gene_path.10085.b:0 "Shift efforts to the new cells"
-	tec_gene_path.10085.b.tooltip:0 "We will obtain the §R$situation_approach_tec_gene_path_t1_bio$§! approach.\nThe situation will advance rapidly towards the new outcome, finding a new use for the Genetic Malleability."
+	# Ref ref ref remove me
+		tec_gene_path.10085.name:0 "Genetic Discovery"
+		tec_gene_path.10085.desc:0 "During one of the tests with our new discovered biotechnology, we found an... interesting anomaly - Some cells reacted to the malleability techniques, becoming semi-independent stem-cells able to not only recombine genetic material, but also create new expressions out if it.\nWhile we can continue forcing the allelomorphic change for streamlined genetic processes, we may be able to apply our efforts to the new hyper-cells, which can... change our entire perspective on genetics, biology and, perhaps, our species as a whole."
+		tec_gene_path.10085.a:0 "Focus on the existing research"
+		tec_gene_path.10085.a.tooltip:0 "The situation will advance rapidly towards the final outcome: Obtaining the desired Genetic Malleability."
+		tec_gene_path.10085.b:0 "Shift efforts to the new cells"
+		tec_gene_path.10085.b.tooltip:0 "We will obtain the §R$situation_approach_tec_gene_path_t1_bio$§! approach.\nThe situation will advance rapidly towards the new outcome, finding a new use for the Genetic Malleability."
 
-	tec_gene_path.100.name:0 "Engineered Evolution"
-	tec_gene_path.100.desc:0 "Sometimes evolution needs a nudge in the right direction. We now have the technology to genetically modify our bodies and minds to endure the trials of an ever-changing environment at an unprecedented rate, and now we also have the opportunity to further change our possibilities."
-	tec_gene_path.100.a:0 "We must start right now!"
-	tec_gene_path.100.a.tooltip:0 "The §Y$situation_tec_gene_path_t1$§! will be available."
+		tec_gene_path.100.name:0 "Engineered Evolution"
+		tec_gene_path.100.desc:0 "Sometimes evolution needs a nudge in the right direction. We now have the technology to genetically modify our bodies and minds to endure the trials of an ever-changing environment at an unprecedented rate, and now we also have the opportunity to further change our possibilities."
+		tec_gene_path.100.a:0 "We must start right now!"
+		tec_gene_path.100.a.tooltip:0 "The §Y$situation_tec_gene_path_t1$§! will be available."
 
-	tec_gene_path.10055.name:0 "Tailoring Genes"
-	tec_gene_path.10055.desc:0 "The first step on this research is to find the proper combination of genes that suit the purpose of moving our species to the right direction; Several pairs, triads and quad groups have resulted compatible, but we need to find the ones that really result in a perfect mixture."
-	tec_gene_path.10055.a:0 "Intriguing, continue the research"
-	tec_gene_path.10055.a.tooltip:0 ""
+		tec_gene_path.10055.name:0 "Tailoring Genes"
+		tec_gene_path.10055.desc:0 "The first step on this research is to find the proper combination of genes that suit the purpose of moving our species to the right direction; Several pairs, triads and quad groups have resulted compatible, but we need to find the ones that really result in a perfect mixture."
+		tec_gene_path.10055.a:0 "Intriguing, continue the research"
+		tec_gene_path.10055.a.tooltip:0 ""
 
-	tec_gene_path.10070.name:0 "Flexible Alleles"
-	tec_gene_path.10070.desc:0 "Curiously, we tried applying certain electrochemical processes to expressive allelomorphs and it resulted in a curious breakthrough - The capacity of adaptation and integration of new code inside the existing one led to a potential controlled overload of genetic material.\nWith time and effort, this can allow a slightly higher integration of potential traits inside already crowded pairs."
-	tec_gene_path.10070.a:0 "This can be a revolution!"
-	tec_gene_path.10070.a.tooltip:0 ""
+		tec_gene_path.10070.name:0 "Flexible Alleles"
+		tec_gene_path.10070.desc:0 "Curiously, we tried applying certain electrochemical processes to expressive allelomorphs and it resulted in a curious breakthrough - The capacity of adaptation and integration of new code inside the existing one led to a potential controlled overload of genetic material.\nWith time and effort, this can allow a slightly higher integration of potential traits inside already crowded pairs."
+		tec_gene_path.10070.a:0 "This can be a revolution!"
+		tec_gene_path.10070.a.tooltip:0 ""
 
-	tec_gene_path.10085.name:0 "Genetic Discovery"
-	tec_gene_path.10085.desc:0 "During one of the tests with our new discovered biotechnology, we found an... interesting anomaly - Some cells reacted to the malleability techniques, becoming semi-independent stem-cells able to not only recombine genetic material, but also create new expressions out if it.\nWhile we can continue forcing the allelomorphic change for streamlined genetic processes, we may be able to apply our efforts to the new hyper-cells, which can... change our entire perspective on genetics, biology and, perhaps, our species as a whole."
-	tec_gene_path.10085.a:0 "Focus on the existing research"
-	tec_gene_path.10085.a.tooltip:0 "The situation will advance rapidly towards the final outcome: Obtaining the desired Genetic Malleability."
-	tec_gene_path.10085.b:0 "Shift efforts to the new cells"
-	tec_gene_path.10085.b.tooltip:0 "We will obtain the §R$situation_approach_tec_gene_path_t1_bio$§! approach.\nThe situation will advance rapidly towards the new outcome, finding a new use for the Genetic Malleability."
+		tec_gene_path.10085.name:0 "Genetic Discovery"
+		tec_gene_path.10085.desc:0 "During one of the tests with our new discovered biotechnology, we found an... interesting anomaly - Some cells reacted to the malleability techniques, becoming semi-independent stem-cells able to not only recombine genetic material, but also create new expressions out if it.\nWhile we can continue forcing the allelomorphic change for streamlined genetic processes, we may be able to apply our efforts to the new hyper-cells, which can... change our entire perspective on genetics, biology and, perhaps, our species as a whole."
+		tec_gene_path.10085.a:0 "Focus on the existing research"
+		tec_gene_path.10085.a.tooltip:0 "The situation will advance rapidly towards the final outcome: Obtaining the desired Genetic Malleability."
+		tec_gene_path.10085.b:0 "Shift efforts to the new cells"
+		tec_gene_path.10085.b.tooltip:0 "We will obtain the §R$situation_approach_tec_gene_path_t1_bio$§! approach.\nThe situation will advance rapidly towards the new outcome, finding a new use for the Genetic Malleability."
 
  # Finish
 	tec_biogenic_path.105.name:0 "REPLACE_ME"
