--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -15,7 +15,7 @@ l_english:
  # ------------------------------------------------- Tooltips
 	tec_district_is_automated:0 "This £district£ district has §YAutomated§! production of its respective resource, in §Rexchange§! of £housing£ Housing and £job£ Jobs.\n\n"
 	# Habitats & menial buildings
-	tec_upgradeable_district_habitat:0 "This £district£ District can provide more production and extra jobs by §YUpgrading the Habitat§!, via planetary £influence£ §YDecision§!.\n\n"
+	tec_upgradeable_district_habitat:0 "This £district£ District provide more $tec_loc_housing$ and extra $tec_loc_jobs$ based on the §Y$tec_loc_habitat_capital$§! level.\n\n"
 	tec_building_affect_district_habitat:0 "This £district£ district is affected by regular production §YBuildings§! and §YTechnologies§!.\n\n"
 
 
