--- a/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
+++ b/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
@@ -668,6 +668,103 @@ requires_habitable_planet:0 "$TRIGGER_FAIL$Due to the characteristics of this ki
  d_tec_sedimented_lithoids:0 "Rich Sediments"
  d_tec_sedimented_lithoids_desc:0 "Enormous deposits of minerals ready to be extracted and agglomerated into more perfected mineral compositions."
 
+
+
+
+
+# Other features
+# OLD RESOURCES
+
+	#sr_terraform_gases:0 "Terraforming Gases"
+	#sr_terraform_gases_desc:1 "Mined from Gas Giants, Terraforming Gases represents an assortment of gases such as Hydrogen, Helium and Methane. Access to Terraforming Gases will make it easier for us to terraform planets."
+
+	#sr_terraform_liquids:0 "Terraforming Liquids"
+	#sr_terraform_liquids_desc:1 "Mined from Frozen planets, Terraforming Fluids represents different types of fluids such as dihydrogen monoxide. Access to Terraforming Fluids will make it easier for us to terraform planets."
+
+	#sr_garanthium:0 "Garanthium Ore"
+	#sr_garanthium_desc:2 "This ore can be refined into a metal that is both very malleable and durable. It is an excellent material used for the construction of ships."
+		# Garantium rich planet - Extra alloys?
+		# Garantium asteroids - shipyard build speed?
+
+	#sr_neutronium:0 "Neutronium Ore"
+	#sr_neutronium_desc:1 "Neutronium is a super-dense substance composed of neutrons that can be forged into extremely resistant hulls."
+		# Neutronium forge?
+
+	#sr_helium:0 "Helium-3"
+	#sr_helium_desc:0 "This isotope of helium is used as a fuel in a wide variety of reactors and other energy production facilities."
+		# 
+
+	#sr_yuranic:0 "Yurantic Crystals"
+	#sr_yuranic_desc:0 "These crystals have rare reflective properties that enhance the power output of energy weapons."
+		# Extra rare crystals?
+
+	#sr_teldar:0 "Teldar Crystals"
+	#sr_teldar_desc:1 "Extremely durable crystals that enhance the armor-piercing capabilities and destructive potential of projectile weapons."
+		# Extra rare crystals?
+		# Specific module?
+
+	#sr_mirium: "Mirium Ore"
+	#sr_mirium_desc: "This rare ore is too brittle to be used in an alloy, but if properly made mirium projectiles have unmatched armor piercing potential."
+		# Extra rare crystals?
+		# Specific module?
+
+	#sr_satramene:0 "Satramene Gas"
+	#sr_satramene_desc:3 "This gas is a naturally occurring stimulant found on some worlds. It has a calming effect on most beings, and stimulates consensus-seeking behaviors in groups. Its addictive nature is a well-documented side-effect."
+		# Pop effects?
+		# Unlocks spy actions?
+
+	#sr_lythuric:0 "Lythuric Gas"
+	#sr_lythuric_desc:3 "Small concentrations of this gas mixed with fuel have been shown to significantly increase thrust."
+		# Pop effects?
+		# Unlocks spy actions?
+
+	#sr_alien_test_subjects: "Alien Test Subjects"
+	#sr_alien_test_subjects_desc: "The genetic makeup of these non-sapient alien creatures make them particularly useful as test subjects in experiments involving a variety of domestic products and medicines."
+
+	#sr_pitharan:0 "Pitharan Dust"
+	#sr_pitharan_desc:2 "This fine, energy-dense dust serves as an excellent fertilizer."
+		# Extra farming output
+
+	#sr_engos:0 "Engos Vapor"
+	#sr_engos_desc:3 "A naturally occurring stimulant that helps all forms of life perform at maximum capacity."
+		# Extra pop output
+
+	#sr_xaldor: "Xaldor Gemstones"
+	#sr_xaldor_desc: "These rare gems emit an ethereal glow that changes color depending on the mood of whoever is holding them. The glow becomes especially intense in the vicinity of psionically-gifted individuals."
+		# Psionic/Psychic pop output
+
+	#sr_orillium:0 "Orillium Ore"
+	#sr_orillium_desc:2 "Orillium is a very unstable element that can be used to efficiently randomize high-frequency shield modulations, improving potential defensive capabilities."
+		# Ship module
+
+	#sr_sactajenian: "Sactajenian Spice"
+	#sr_sactajenian_desc: "A psychoactive compound that imbues users with a limited psionic connection to one another. This effect somewhat diminishes free will and individual mental capacity, but the new 'group mind' can perform tasks as a single organism for a limited time."
+		# Bonus to pop output, hiper efficiency for hiveminds
+
+	#sr_zarbadoccan: "Zarbadoccan Mold"
+	#sr_zarbadoccan_desc: "A powerful stimulant that temporarily gifts most users with a sense of increased creativity or introspective emotional awareness. This kind of 'soul-searching' is frowned upon by some cultures as being counter-productive."
+		# Bonus to pop output
+
+	#sr_riggan:0 "Riggan Spice"
+	#sr_riggan_desc:0 "The secret methods of extracting and mixing this spice is something that is not known outside the $leviathans.103.name$. The spice has a unique flavor and is a popular food ingredient."
+		# From riggan commerce
+
+	#sr_carnian: "Carnian Pearls"
+	#sr_carnian_desc: "These pearls are often used in jewelry and their brilliant white metallic luster is quite eye-catching, which may explain why they are so popular among avian species."
+		# Trade/Amenities bonuses
+
+	#sr_muutagan:0 "Muutagan Crystals"
+	#sr_muutagan_desc:0 "The $leviathans.104.name$ are the only group that possess the knowledge of crafting these crystals. If struck, these "singing" crystals start to vibrate while emitting a unique humming sound. They are often used as musical instruments, and have a calming effect on most beings."
+		# Muutagan Enclave
+
+	#sr_xuran:0 "XuraGel"
+	#sr_xuran_desc:0 "Produced by $leviathans.100.name$, this gel claims various positive medicinal effects for creatures living in inhospitable environments."
+		# From Xuracorp
+
+	#sr_kobor: "Kobor Wood"
+	#sr_kobor_desc: "Kobor trees can be found on many different worlds, and their seeds were likely spread deliberately by someone long ago. The wood from these trees is light, extremely durable and easy to work with. Arthropods in particular favor it as a building material."
+		# Planetary building speed
+
 # Debug
  d_tec_planetsize_checker:0 "Planet size checker"
  d_tec_planetsize_checker_desc:0 "Debug modifier, if you see this ingame please contact rodahtnov"
