--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -2101,7 +2101,7 @@
   concept_tec_ai_node_desc: "$concept_tec_ai_node$ are a type of leader specific to ['concept_tec_authority_type_ai_auth'] Type Authorities that do not take up §YLeader Capacity§! and use ['concept_tec_sr_tec_ai_power'] as upkeep instead of ['concept_unity'].\n\nThe remaining §Y$tec_loc_sr_tec_ai_power$§! income after upkeeps is converted to experience, depending on each node's ['concept_tec_ai_node_weight'], which can be influenced by §YPolicies§!."
 
 	concept_tec_ai_node_weight: "AI Node Weight"
-  concept_tec_ai_node_weight_desc: "AI Node Weight represents the weight of each node, aka the proportion of the available §Y$tec_loc_sr_tec_ai_power$§! that the notes takes to convert to experience."
+  concept_tec_ai_node_weight_desc: "AI Node Weight represents the weight of each node, aka the proportion of the available §Y$tec_loc_sr_tec_ai_power$§! the former take to convert to experience."
 
 	concept_tec_ai_fragment: "Fragment"
 	concept_tec_ai_fragment_desc: "Fragmenting in the operation of splitting the §Y$tec_loc_ai_ruler_node$§! into and auxiliary §Y$tec_loc_ai_councilor_node$§! for the purpose of filling Council Positions.\n\nFragmenting new AI Nodes, is done from the §YGovernment Screen§! by hovering over the Ruler council slot."
