--- a/localisation/english/zz_evolved_decisions_l_english.yml
+++ b/localisation/english/zz_evolved_decisions_l_english.yml
@@ -243,8 +243,8 @@ decision_tec_exocolonist_awake_secondary_effects:0 "Awake a secondary species po
  decision_tec_hab_arcology_industrial_desc:0 "Artificial stations serve real purposes, and so we can make out of what only was a mere station a proper industrial complex where we can suit our naval, productive and industrial needs."
  decision_tec_hab_arcology_industrial_effects:0 "Upgrades this §H$habitat_2$§! into an §HIndustrial Arcology Habitat§!, granting §Y2 Additional £district£ Districts§! and access to Advanced Industrial specialized Production Districts, able to generate £alloys£ £consumer_goods£ §YAdvanced Resources§!, and £district£ Habitation Arcologies will provide a £building£ Building Slot to the habitat.\n\n§RDue to the effort used on the further modification of the Habitat, this decision is irreversible.§!"
 
- decision_tec_hab_arcology_level_low:0 "£trigger_no£§RRequires an Upgraded Habitat - Habitats can be upgraded with the proper capital level unlocked by the proper technologies researched.§!"
- decision_tec_hab_arcology_level:0 "£trigger_no£§RRequires a Fully Upgraded Habitat - Habitats can be upgraded with the proper capital level unlocked by the proper technologies researched.§!"
+ decision_tec_hab_arcology_level_low:0 "£trigger_no£§RRequires an Upgraded Habitat - Habitats can be upgraded with the proper $tec_loc_habitat_capital$ level unlocked by the proper technologies researched.§!"
+ decision_tec_hab_arcology_level:0 "£trigger_no£§RRequires a Fully Upgraded Habitat - Habitats can be upgraded with the proper $tec_loc_habitat_capital$ level unlocked by the proper technologies researched.§!"
  decision_tec_hab_arcology_districts:0 "£trigger_no£§RRequires having filled all the habitat £district£ Districts.§!"
  decision_tec_hab_arcology_warn:0 "$trigger_tec_warning$§YWarning.§!"
 
