--- a/localisation/english/zz_evolved_tech_l_english.yml
+++ b/localisation/english/zz_evolved_tech_l_english.yml
@@ -214,7 +214,7 @@
 
  # --------------- Hive de/assimilation
 	tech_tec_hive_deassimilation:0 "Hive Mind Severance"
-	tech_tec_hive_deassimilation_desc:0 "Hive Minds are strange collectives of a myriad of creatures, all connected by a specific kind of link which usually lead to feral states or even death if the drone is removed from their brethren, but with adequate technologies and careful genetic procedures we can severe that link and provide them with the joy of being a sapient, sentient, individual creature."
+	tech_tec_hive_deassimilation_desc:0 "Hive Minds are strange collectives of a myriad of creatures, all connected by a specific kind of link which usually lead to feral states or even death if the drone is removed from their brethren, but with adequate technologies and careful genetic procedures we can sever that link and provide them with the joy of being a sapient, sentient and individualistic creature."
 	tec_tech_allow_hive_deassimilation:0 "§HUnlocks feature:§! Drone Integration"
 	tech_tec_hive_deassimilation_effect:0 "§HDrone Integration:§!\nHive Mind drones can be §YDe-Assimilated§! into individuals, removing their collective consciousness link."
 
