--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -730,18 +730,18 @@
 # --------------------------- ASCENSION T1 --------------------------------
  # Biogenic Mutation (B)
  # ------------------------------------------------------------
-	tradition_tec_biogenic:0 "Evolution"
+	tradition_tec_biogenic:0 "Mutation"
 	tradition_tec_biogenic_desc:0 "We have surpassed the limits natural biology imposed on our bodies, and now each single cell of our very selves are a tool to build our future."
 
 	tr_tec_biogenic_adopt:0 "$tradition_tec_biogenic$ Traditions"
-	tr_tec_biogenic_adopt_tooltip:0 "Allows the construction of £building£ §HXenotransplantation Chambers§!.\nUnlocks the £job_purge£ §HXenoextraction§! purge type.\nBiological species can be harvested for $tec_loc_xenocytes$ and £society£ Society via Xenotransplantation Chambers or Xenoextraction purge type.\n$tec_loc_xenocytes$ can be used to §YChange§! and §YUpgrade§! Mutagenic traits."
+	tr_tec_biogenic_adopt_tooltip:0 "Allows the construction of §H£building£ Xenotransplantation Chambers§!.\nUnlocks the §H£job_purge£ Xenoextraction§! purge type.\nBiological species can be harvested for $tec_loc_xenocytes$ and $tec_loc_society$ via £building£ Xenotransplantation Chambers or £job_purge£ Xenoextraction purge type.\n$tec_loc_xenocytes$ can be used to §YChange§! and §YUpgrade§! Mutagenic traits."
 
 	tr_tec_biogenic_finish:0 "$tradition_tec_biogenic$ Traditions Finished"
 	tr_tec_biogenic_finish_tooltip:4 "TO DO.\n$TRADITIONS_FINISH_AP$"
 
 	tr_tec_biogenic_1:0 "Stemic Overdrive"
 	tr_tec_biogenic_1_delayed:0 "to do"
-	tr_tec_biogenic_1_tooltip:0 "Biological §Y$MOD_LEADER_AGE$§! increased by §G15§! years per §HOrganic Modification Point§!.\n£mod_pop_environment_tolerance£ §Y$MOD_HABITABILITY_FLOOR$§! increased by §G5%§! per §HOrganic Modification Point§!."	
+	tr_tec_biogenic_1_tooltip:0 "Biological §Y$MOD_LEADER_AGE$§! increased by §G10§! years per §HOrganic Modification Point§!.\n£mod_pop_environment_tolerance£ §Y$tec_loc_habitability$§! increased by §G5%§! per §HOrganic Modification Point§!."	
 
 	tr_tec_biogenic_2:0 "Cellular Manipulation"
 	tr_tec_biogenic_2_delayed:0 "to do"
@@ -753,7 +753,7 @@
 
 	tr_tec_biogenic_4:0 "Biomatter Reclamation"
 	tr_tec_biogenic_4_delayed:0 "to do"
-	tr_tec_biogenic_4_tooltip:0 "Pops undergoing Xenotransplantation or Xenoextraction also produce extra £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§! and §Y$tec_loc_unity$§!."
+	tr_tec_biogenic_4_tooltip:0 "Pops undergoing Xenotransplantation or Xenoextraction also produce extra §Y$tec_loc_organic_assembly$§! and §Y$tec_loc_unity$§!."
 
 	tr_tec_biogenic_5:0 "TO DO"
 	tr_tec_biogenic_5_delayed:0 "to do"
