--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -169,6 +169,12 @@
 	tec_loc_building:0 "£building£ Building"
 	tec_loc_building_plural:0 "£building£ Buildings"
 	tec_loc_building_icon:0 "£building£"
+	tec_loc_planet_capital:0 "£building£ Planet Capital"
+	tec_loc_planet_capitals:0 "£building£ Planetary Capitals"
+	tec_loc_planetary_capital:0 "$tec_loc_planet_capital$"
+	tec_loc_planetary_capitals:0 "$tec_loc_planet_capitals$"
+	tec_loc_habitat_capital:0 "£building£ Habitat Capital"
+	tec_loc_habitat_capitals:0 "£building£ Habitat Capitals"
 	tec_loc_capital_tier:0 "£building£ Capital Tier"
 	tec_loc_district:0 "£district£ District"
 	tec_loc_district_plural:0 "£district£ Districts"
@@ -211,6 +217,7 @@
 	tec_loc_leader_icon:0 "£tec_leader£"
 	tec_loc_leader:0 "$tec_loc_leader_icon$ Leader"
 	tec_loc_leaders:0 "$tec_loc_leader_icon$ Leaders"
+	tec_loc_leader_age:0 "$MOD_LEADER_AGE$"
 
 	tec_loc_councilor_traits: "£council£ Councilor Traits"
 	tec_loc_normal_traits: "£noclass£ Normal Traits"
@@ -442,9 +449,9 @@ tec_cui_tec_ai_empire_leader_loc: "Leader (non-AI Nodes)"
 
 #Leader levels
 
-#Level    II   III   IV    V     VI     VII    VIII   IX     X
-#XP       400  1100  2100  3400  5000   6900   8100   10600  13400
-#Total XP 400  1500  3600  7000  12000  18900  27000  37600  51000
+#Level		II   III   IV			V		 	VI			VII			VIII   IX			X
+#XP		   	400  1100  2100  	3400  5000  	6900  	8100   10600  13400
+#Total XP 400  1500  3600  	7000  12000  	18900 	27000  37600  51000
 
 
 # Debug
